# assemblylift-template-jamstack

./: .gitignore  README.md  assemblylift.toml  package-lock.json  package.json  webpack.config.js
services/www/: service.toml
services/www/server/: .gitignore  Cargo.toml
services/www/server/.cargo/: config
services/www/server/src/: lib.rs
web/: main.js
web/style/: main.css
web/views/: index.ejs
